--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ code.language-yaml {
 <li>can speak some Chinese, (especially football terminologies),</li>
 <li>and/or play CF/DMF/GK on the pitch.</li>
 </ul>
-<p>We have regular training sessions on <strong>Friday afternoon</strong>, at <strong>First Stadium</strong>, and <strong>a trial will be held then</strong>. However, we reserve the right to decline players who do not meet our most salient demands yet ask for positions in the starting 11.</p>
+<p>We have regular training sessions on <strong>Friday afternoon</strong>, at <strong>First Stadium</strong>, and <strong>a trial will be held on March 1st</strong>. However, we reserve the right to decline players who do not meet our most salient demands yet ask for positions in the starting 11.</p>
 <p><strong>Feel free to contact the captain (Wechat ID: RobbieCyy) on Wechat if you would like to join us.</strong></p>
 
       </div>
