Commiting bilingual links

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@ code.language-yaml {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview   ">
-      <h2 class="mume-header" id="fc-school-of-physics">FC School of Physics</h2>
+      <p>English <a href="&#x6B22;&#x8FCE;&#x6765;&#x5230;&#x7269;&#x7406;&#x5B66;&#x9662;&#x8DB3;&#x7403;&#x961F;.html"> &#x4E2D;&#x6587;</a></p>
+<h2 class="mume-header" id="fc-school-of-physics">FC School of Physics</h2>
 
 <hr>
 <h3 class="mume-header" id="about-the-team">About the team</h3>
