--- a/欢迎来到物理学院足球队.html
+++ b/欢迎来到物理学院足球队.html
@@ -223,7 +223,7 @@ code.language-yaml {
 <div style="float:right">
     <img src="Logo.png" {width="200px" height="200px" title="Our logo" alt="Our logo" }>
 </div>
-<p>&#x6211;&#x4EEC;&#x662F;&#x5317;&#x4EAC;&#x5927;&#x5B66;&#x7269;&#x7406;&#x5B66;&#x9662;&#x8DB3;&#x7403;&#x961F;&#x3002;&#x6211;&#x4EEC;&#x662F;&#x5317;&#x5927;&#x8DB3;&#x575B;&#x7684;&#x4E00;&#x652F;&#x52B2;&#x65C5;&#xFF0C;&#x8FD1;&#x5E74;&#x6765;&#x575A;&#x6301;&#x7740;&#x4F20;&#x63A7;&#x6253;&#x53D1;&#xFF0C;&#x662F;&#x957F;&#x4F20;&#x51B2;&#x540A;&#x5C45;&#x591A;&#x7684;&#x5317;&#x5927;&#x8DB3;&#x575B;&#x4E2D;&#x7684;&#x4E00;&#x80A1;&#x6E05;&#x6D41;&#x3002;&#x6211;&#x4EEC;&#x5E38;&#x5E74;&#x5360;&#x636E;&#x5317;&#x5927;&#x676F;&#x516B;&#x5F3A;&#x7684;&#x4E00;&#x5E2D;&#xFF0C;&#x53BB;&#x5E74;&#x66F4;&#x662F;&#x95EF;&#x5165;&#x4E86;&#x534A;&#x51B3;&#x8D5B;&#x3002;</p>
+<p>&#x6211;&#x4EEC;&#x662F;&#x5317;&#x4EAC;&#x5927;&#x5B66;&#x7269;&#x7406;&#x5B66;&#x9662;&#x8DB3;&#x7403;&#x961F;&#x3002;&#x6211;&#x4EEC;&#x662F;&#x5317;&#x5927;&#x8DB3;&#x575B;&#x7684;&#x4E00;&#x652F;&#x52B2;&#x65C5;&#xFF0C;&#x8FD1;&#x5E74;&#x6765;&#x575A;&#x6301;&#x7740;&#x4F20;&#x63A7;&#x6253;&#x6CD5;&#xFF0C;&#x662F;&#x957F;&#x4F20;&#x51B2;&#x540A;&#x5C45;&#x591A;&#x7684;&#x5317;&#x5927;&#x8DB3;&#x575B;&#x4E2D;&#x7684;&#x4E00;&#x80A1;&#x6E05;&#x6D41;&#x3002;&#x6211;&#x4EEC;&#x5E38;&#x5E74;&#x5360;&#x636E;&#x5317;&#x5927;&#x676F;&#x516B;&#x5F3A;&#x7684;&#x4E00;&#x5E2D;&#xFF0C;&#x53BB;&#x5E74;&#x66F4;&#x662F;&#x95EF;&#x5165;&#x4E86;&#x534A;&#x51B3;&#x8D5B;&#x3002;</p>
 </div>
 <hr>
 <h3 class="mume-header" id="%E5%8A%A0%E5%85%A5%E6%88%91%E4%BB%AC">&#x52A0;&#x5165;&#x6211;&#x4EEC;</h3>
