--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
 
       <link rel="stylesheet" href="file:///C:\Users\robbi\.atom\packages\markdown-preview-enhanced\node_modules\@shd101wyy\mume\dependencies\katex\katex.min.css">
 
-
-
-
-
-
-
-
-
-
       <style>
       /**
  * prism.js Github theme based on GitHub's theme.
@@ -241,7 +232,12 @@ code.language-yaml {
 <p>We have regular training sessions on <strong>Friday afternoon</strong>, at <strong>First Stadium</strong>, and <strong>a trial will be held on March 1st</strong>. However, we reserve the right to decline players who do not meet our most salient demands yet ask for positions in the starting 11.</p>
 <p><strong>Feel free to contact the captain (Wechat ID: RobbieCyy) on Wechat if you would like to join us.</strong></p>
 
+<hr>
+
+<div style='float:left'><img src='http://www.hit-counts.com/counter.php?t=MTQzNjc4Mw==' border='0' alt='Welcome'></div>
+
       </div>
+
 
 
 
